add logo,about-comp,update hero section

--- a/src/Componants/search.css
+++ b/src/Componants/search.css
@@ -21,8 +21,8 @@
     display: inline-block;
   }
 
-  button{
+  /* button{
     width: 20%;
     height: 40px;
     display: inline-block;
-  }
+  } */
