--- a/src/Componants/navbar.css
+++ b/src/Componants/navbar.css
@@ -33,9 +33,9 @@
 #navBTN {
     color: white !important;
     border-color: white !important;
-    padding: 0.5rem 2rem; /* تعديل الـ padding لجعل الكلمة في وسط الزر */
-    text-align: center; /* محاذاة النص في وسط الزر */
-    display: inline-block; /* التأكد من أن الزر يأخذ العرض المناسب للنص */
+    padding: 0.5rem 2rem; 
+    text-align: center; 
+    display: inline-block; 
 }
 
 #navBTN:hover {
@@ -62,9 +62,10 @@
 #paymentBTN{
   color: #003366 !important;
   border-color: #003366 !important;
-  padding: 0.5rem 2rem; /* تعديل الـ padding لجعل الكلمة في وسط الزر */
-  text-align: center; /* محاذاة النص في وسط الزر */
-  display: inline-block; /* التأكد من أن الزر يأخذ العرض المناسب للنص */
+  padding: 0.5rem 2rem; 
+  
+  text-align: center; 
+  display: inline-block; 
 
 margin-top: 5vh;}
 
@@ -72,9 +73,7 @@ margin-top: 5vh;}
   color: white !important;
   background-color:#003366 !important;
 }
-/* .custom-navbar .navbar-nav.ms-auto .nav-item {
-    margin-right: 1px; /* تقليل المسافة بين الزرارين */
-/* } */
+
 
 
 
