--- a/src/Componants/search.css
+++ b/src/Componants/search.css
@@ -1,6 +1,7 @@
 .search-container {
     width: 100%;
     margin: 15px 0px;
+    height: 50%;
    
   }
   
@@ -20,6 +21,7 @@
     padding-right: 20px;
     display: inline-block;
     width: 25%;
+    min-width: 200px;
   }
 
   .buttn1{
@@ -28,4 +30,5 @@
     display: inline-block;
     margin:auto;
     margin-top: 40px;
+    min-width: 200px;
   }
