--- a/src/Componants/search.css
+++ b/src/Componants/search.css
@@ -1,7 +1,7 @@
 .search-container {
     width: 100%;
     margin: 15px 0px;
-    height: 50%;
+    /* height: %;  */
    
   }
   
@@ -19,15 +19,15 @@
     margin: 10px;
     border-right: 2px rgb(192, 191, 191) solid;
     padding-right: 20px;
-    display: inline-block;
+    /* display: inline-block; */
     width: 25%;
-    min-width: 200px;
+    min-width: 250px;
   }
 
   .buttn1{
     width: 16%;
     height: 40px;
-    display: inline-block;
+    /* display: inline-block; */
     margin:auto;
     margin-top: 40px;
     min-width: 200px;
