--- a/src/Componants/bookstyle.css
+++ b/src/Componants/bookstyle.css
@@ -5,7 +5,13 @@
   }
   
   .w-50 input[type="radio"]:checked + div {
-    border: 1px solid #ccc;
+    border: 1px dashed #ccc;
     padding: 10px;
     border-radius: 10px;
+  }
+
+  .custom-dashed-border {
+    border-right: 5px dashed rgb(66, 40, 40);
+    padding: 10px 0px 10px 0px;
+    margin: 9px 0px 9px 0px;
   }
