--- a/src/Pages/DisplayTrips/DisplayTrips.css
+++ b/src/Pages/DisplayTrips/DisplayTrips.css
@@ -10,15 +10,45 @@
   cursor: pointer;
 }
 
-.table td,
-.table th {
-  vertical-align: middle;
+.table th, .table td {
+  white-space: nowrap; /* Prevent text wrapping */
 }
 
-.table {
-  margin-bottom: 0;
-  box-shadow: (rgb(224, 218, 218));
+.table th:nth-child(1),
+.table td:nth-child(1) {
+  width: 10%; 
 }
+
+.table th:nth-child(2),
+.table td:nth-child(2) {
+  width: 15%; 
+}
+
+.table th:nth-child(3),
+.table td:nth-child(3) {
+  width: 15%; 
+}
+
+.table th:nth-child(4),
+.table td:nth-child(4) {
+  width: 20%; 
+}
+
+.table th:nth-child(5),
+.table td:nth-child(5) {
+  width: 50%; 
+}
+
+.table th:nth-child(6),
+.table td:nth-child(6) {
+  width: 5%; 
+}
+
+.table th:nth-child(7),
+.table td:nth-child(7) {
+  width: 5%; 
+}
+
 
 .pagination {
   margin-top: 1rem;
