--- a/src/Componants/bookstyle.css
+++ b/src/Componants/bookstyle.css
@@ -1,6 +1,6 @@
 
 
-.w-50 {
+ .w-50 {
     border: none;
   }
   
@@ -18,5 +18,36 @@
 
 
   .equal-columns th, .equal-columns td {
-    width: 11.11%; /* 100% / 9 columns */
+     width: 11.11%;
+      /* 100% / 9 columns  */
+   }
+  
+  
+  
+   /* ------------------------------------------------------------------------------scrol xxxxx  */
+  /* .w-50 {
+    border: none;
   }
+  
+  .w-50 input[type="radio"]:checked + div {
+    border: 1px dashed #ccc;
+    padding: 10px;
+    border-radius: 10px;
+  }
+  
+  .custom-dashed-border {
+    border-right: 5px dashed rgb(66, 40, 40);
+    padding: 10px 0px;
+    margin: 9px 0px;
+  }
+  
+  .equal-columns th, .equal-columns td {
+    width: auto; 
+  }
+  
+  table {
+    width: 100%; 
+    border-collapse: collapse; 
+    overflow: hidden; 
+  } */
+  
